# cardigan

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .mcp.json  AGENT-FEEDBACK.md  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.web  Dockerfile.worker  LICENSE  README.md  SECURITY_AUDIT.md  SPIKE-NOTES.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  feature_list.json  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run_worker.py  watch_transcripts.py
.snapshots/: dashboard-v2.1-archive.db
alembic/: env.py
api/: __init__.py  main.py
claude-desktop-project/: EDITOR_AGENT_INSTRUCTIONS.md
config/: house_style.yaml  instances.json  llm-config.json
diarization/: Dockerfile  app.py  requirements.txt
docker/: README.md  entrypoint-api.sh
docs/: AGENT_INTERFACE_GUIDE.md  API_REFERENCE.md  CLAUDE_DESKTOP_SETUP.md  COST_DATA_VERSIONING.md  FEATURE_AUDIO_UPLOAD.md  HOMELAB_DEPLOY.md  MCP_REFERENCE.md  POST_LAUNCH_TEST_PLAN.md  PRODUCER_ONBOARDING.md  QUICK_START.md  REMOTE_ACCESS.md  STYLE_FEEDBACK_LOOP.md  VERSIONING.md  WEBSOCKET_IMPLEMENTATION.md  WEB_UI_GUIDE.md
knowledge/: glossary.md  wisconsin_reference.md
mcp_server/: requirements.txt  server.py
planning/: 2026-06-10-local-dougie-deploy-handoff.md  2026-07-02-local-llm-omlx-integration.md  2026-07-10-self-updating-local-model-backends.md  CLOUD_COST_ESTIMATE.md  DEPLOYMENT_COST_ANALYSIS_5.0.md  DESIGN_3.5.md  LEGACY_INVENTORY.md  MCP_DECOMMISSION_PLAN.md  QOL_CRON_CATALOG.md  REMAINING_WORK.md  YOUTUBE_METADATA_FEATURE.md  backlog.md  claude-progress.txt  epic-l-consolidation-plan.md  expanded-prompt-cardigan-hybrid-deterministic-pipeline.md  sprint-1b-handoff.md  sprint-5-staging-soak.md  v4.2-maintenance-sprint-plan.md
prompts/: README.md  analyst.md  ap_style_bot.md  copy_editor.md  formatter.md  seo.md  timestamp.md  validator.md
scripts/: backfill_airtable.py  stop.sh  (+21 more)
(+316 files in other folders)
