[project]
name = "editorial-assistant"
version = "3.5.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    "venv*",
    "web",
    "alembic/versions",
    ".claude",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501"]

[tool.black]
target-version = ["py313"]
line-length = 120
extend-exclude = '''
(
    venv.*
    | web
    | alembic/versions
)
'''
